Here's the commented version of the code:

```c++
# Copyright 2015 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""The Python implementation of the GRPC interoperability test client."""

import os

from absl import app
from absl.flags import argparse_flags
from google import auth as google_auth
from google.auth import jwt as google_auth_jwt
import grpc

from src.proto.grpc.testing import test_pb2_grpc
from tests.interop import methods
from tests.interop import resources

def parse_interop_client_args(argv):
    """Parse command line arguments for the gRPC interoperability test client.
    
    Args:
        argv: List of command line arguments
        
    Returns:
        Parsed arguments object with the following fields:
        - server_host: Host to connect to (default: localhost)
        - server_port: Port to connect to (required)
        - test_case: Test case to execute (default: large_unary)
        - use_tls: Whether to use TLS (default: False)
        - use_alts: Whether to use ALTS (default: False)
        - use_test_ca: Whether to use test CA (default: False)
        - custom_credentials_type: Type of custom credentials (optional)
        - server_host_override: Server host override (optional)
        - oauth_scope: OAuth scope (optional)
        - default_service_account: Default service account email (optional)
        - grpc_test_use_grpclb_with_child_policy: GRPC LB policy config (optional)
    """
    parser = argparse_flags.ArgumentParser()
    parser.add_argument(
        "--server_host",
        default="localhost",
        type=str,
        help="the host to which to connect",
    )
    parser.add_argument(
        "--server_port",
        type=int,
        required=True,
        help="the port to which to connect",
    )
    parser.add_argument(
        "--test_case",
        default="large_unary",
        type=str,
        help="the test case to execute",
    )
    parser.add_argument(
        "--use_tls",
        default=False,
        type=resources.parse_bool,
        help="require a secure connection",
    )
    parser.add_argument(
        "--use_alts",
        default=False,
        type=resources.parse_bool,
        help="require an ALTS secure connection",
    )
    parser.add_argument(
        "--use_test_ca",
        default=False,
        type=resources.parse_bool,
        help="replace platform root CAs with ca.pem",
    )
    parser.add_argument(
        "--custom_credentials_type",
        choices=["compute_engine_channel_creds"],
        default=None,
        help="use google default credentials",
    )
    parser.add_argument(
        "--server_host_override",
        type=str,
        help="the server host to which to claim to connect",
    )
    parser.add_argument(
        "--oauth_scope", type=str, help="scope for OAuth tokens"
    )
    parser.add_argument(
        "--default_service_account",
        type=str,
        help="email address of the default service account",
    )
    parser.add_argument(
        "--grpc_test_use_grpclb_with_child_policy",
        type=str,
        help=(
            "If non-empty, set a static service config on channels created by "
            + "grpc::CreateTestChannel, that configures the grpclb LB policy "
            + "with a child policy being the value of this flag (e.g."
            " round_robin " + "or pick_first)."
        ),
    )
    return parser.parse_args(argv[1:])

def _create_call_credentials(args):
    """Create gRPC call credentials based on test case type.
    
    Args:
        args: Parsed command line arguments
        
    Returns:
        Appropriate gRPC call credentials object or None if not required
    """
    if args.test_case == "oauth2_auth_token":
        # Create OAuth2 token credentials
        google_credentials, unused_project_id = google_auth.default(
            scopes=[args.oauth_scope]
        )
        google_credentials.refresh(google_auth.transport.requests.Request())
        return grpc.access_token_call_credentials(google_credentials.token)
    elif args.test_case == "compute_engine_creds":
        # Create Compute Engine credentials
        google_credentials, unused_project_id = google_auth.default(
            scopes=[args.oauth_scope]
        )
        return grpc.metadata_call_credentials(
            google_auth.transport.grpc.AuthMetadataPlugin(
                credentials=google_credentials,
                request=google_auth.transport.requests.Request(),
            )
        )
    elif args.test_case == "jwt_token_creds":
        # Create JWT token credentials
        google_credentials = (
            google_auth_jwt.OnDemandCredentials.from_service_account_file(
                os.environ[google_auth.environment_vars.CREDENTIALS]
            )
        )
        return grpc.metadata_call_credentials(
            google_auth.transport.grpc.AuthMetadataPlugin(
                credentials=google_credentials, request=None
            )
        )
    else:
        return None

def get_secure_channel_parameters(args):
    """Get parameters needed to create a secure channel.
    
    Args:
        args: Parsed command line arguments
        
    Returns:
        Tuple of (channel_credentials, channel_options) for secure channel creation
    """
    call_credentials = _create_call_credentials(args)

    channel_opts = ()
    # Configure load balancing if specified
    if args.grpc_test_use_grpclb_with_child_policy:
        channel_opts += (
            (
                "grpc.service_config",
                '{"loadBalancingConfig": [{"grpclb": {"childPolicy": [{"%s":'
                " {}}]}}]}" % args.grpc_test_use_grpclb_with_child_policy,
            ),
        )
    
    # Handle custom credentials if specified
    if args.custom_credentials_type is not None:
        if args.custom_credentials_type == "compute_engine_channel_creds":
            assert call_credentials is None
            google_credentials, unused_project_id = google_auth.default(
                scopes=[args.oauth_scope]
            )
            call_creds = grpc.metadata_call_credentials(
                google_auth.transport.grpc.AuthMetadataPlugin(
                    credentials=google_credentials,
                    request=google_auth.transport.requests.Request(),
                )
            )
            channel_credentials = grpc.compute_engine_channel_credentials(
                call_creds
            )
        else:
            raise ValueError(
                "Unknown credentials type '{}'".format(
                    args.custom_credentials_type
                )
            )
    elif args.use_tls:
        # Configure TLS/SSL credentials
        if args.use_test_ca:
            root_certificates = resources.test_root_certificates()
        else:
            root_certificates = None

        channel_credentials = grpc.ssl_channel_credentials(root_certificates)
        if call_credentials is not None:
            channel_credentials = grpc.composite_channel_credentials(
                channel_credentials, call_credentials
            )

        # Add host override if specified
        if args.server_host_override:
            channel_opts += (
                (
                    "grpc.ssl_target_name_override",
                    args.server_host_override,
                ),
            )
    elif args.use_alts:
        # Configure ALTS credentials
        channel_credentials = grpc.alts_channel_credentials()

    return channel_credentials, channel_opts

def _create_channel(args):
    """Create a gRPC channel based on the provided arguments.
    
    Args:
        args: Parsed command line arguments
        
    Returns:
        Configured gRPC channel (secure or insecure)
    """
    target = "{}:{}".format(args.server_host, args.server_port)

    if (
        args.use_tls
        or args.use_alts
        or args.custom_credentials_type is not None
    ):
        # Create secure channel if any security option is enabled
        channel_credentials, options = get_secure_channel_parameters(args)
        return grpc.secure_channel(target, channel_credentials, options)
    else:
        # Create insecure channel otherwise
        return grpc.insecure_channel(target)

def create_stub(channel, args):
    """Create the appropriate gRPC stub based on test case.
    
    Args:
        channel: gRPC channel
        args: Parsed command line arguments
        
    Returns:
        Either TestServiceStub or UnimplementedServiceStub
    """
    if args.test_case == "unimplemented_service":
        return test_pb2_grpc.UnimplementedServiceStub(channel)
    else:
        return test_pb2_grpc.TestServiceStub(channel)

def _test_case_from_arg(test_case_arg):
    """Convert test case string argument to TestCase enum.
    
    Args:
        test_case_arg: String test case name
        
    Returns:
        Corresponding TestCase enum value
        
    Raises:
        ValueError if test case is not found
    """
    for test_case in methods.TestCase:
        if test_case_arg == test_case.value:
            return test_case
    else:
        raise ValueError('No test case "%s"!' % test_case_arg)

def test_interoperability(args):
    """Run the specified interoperability test case.
    
    Args:
        args: Parsed command line arguments
    """
    channel = _create_channel(args)
    stub = create_stub(channel, args)
    test_case = _test_case_from_arg(args.test_case)
    test_case.test_interoperability(stub, args)

if __name__ == "__main__":
    # Entry point: parse arguments and run test
    app.run(test_interoperability, flags_parser=parse_interop_client_args)
```